v3.4.9 (XXXX-XX-XX)
-------------------

* Fixed UPSERT matching.

  Empty objects in the `UPSERT { ... }` expression will not be omitted anymore:

      db._collection("col").insert({ "find" : "me" });
      db._query(` UPSERT { "find" : "me", "foo" : {} }
                  UPDATE { "foo"  : "not gonna happen" }
                  INSERT { "find" : "me", "foo"  : {} }
                  INTO col
      `)

  This will now correctly insert a document instead of updating the existing,
  that only partially machtes the upsert-expression.

* In the RocksDB engine, automatically flush more exotic column families
  10 minutes after server startup, plus every 12 hours while the server is
  running. This should prevent data from more exotic column families to
  stay only in WAL and memtables, which may block WAL journals collection.

* The _users collection is now properly restored when using arangorestore.

* Updated arangosync to 0.7.1.

* Fixed issue #10470: The WebUI now shows potential errors and details which
  occured using _api/import (e.g. unique constraint violated).

* Make the timeouts for replication requests (for active failover and master-slave 
  replication configurable via startup options:

      --replication.connect-timeout
      --replication.request-timeout

* Fixed ArangoSearch index removes being discarded on commiting consolidation
  results with pending removes after some segments under consolidation were
  already committed.

* Disallow the usage of subqueries inside AQL traversal PRUNE conditions.
  Using subqueries inside PRUNE conditions causes undefined behavior,
  so such queries will now be aborted early on with a parse error 
  instead of running into undefined behavior.

* Fixed search not working in document view while in code mode.

* Fixed issue #10090: fix repeatable seek to the same document in
  SEARCH operations for ArangoSearch views.

* Fix config directory handling, so we don't trap into UNC path lookups on Windows.
