@@ -1,6 +1,9 @@
 v3.4.9 (XXXX-XX-XX)
 -------------------
 
+* Fixed issue #10440: Incorrect sorting with sort criteria partially covered 
+  by index.
+
 * Fixed UPSERT matching.
 
   Empty objects in the `UPSERT { ... }` expression will not be omitted anymore:
